--- a/index.html
+++ b/index.html
@@ -38,13 +38,10 @@
             <div class="navbar-nav m-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#about" class="nav-item nav-link">About</a>
-                <a href="#qualification" class="nav-item nav-link">Quality</a>
-                <a href="#skill" class="nav-item nav-link">Skill</a>
-                <a href="#service" class="nav-item nav-link">Service</a>
-                <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
-                <a href="#testimonial" class="nav-item nav-link">Review</a>
-                <a href="#blog" class="nav-item nav-link">Blog</a>
-                <a href="#contact" class="nav-item nav-link">Contact</a>
+                <a href="#qualification" class="nav-item nav-link">Qualification</a>
+                <a href="#skill" class="nav-item nav-link">Skills</a>
+                <a href="#projects" class="nav-item nav-link">Projects</a>
+
             </div>
             <a href="" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
         </div>
@@ -90,9 +87,7 @@
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Maryam Waseem</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">24 December 2004</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Bachleors in Computer Science(Present)</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+93 3184121151</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">maryamw1124@gmail.com</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">31/8 Main Sanda Rd National Town Lahore</span></h6></div>
                     </div>
 
                 </div>
@@ -203,7 +198,7 @@
 <!-- Skills End -->
 
     <!-- Portfolio Start -->
-    <div class="container-fluid py-5" id="portfolio">
+    <div class="container-fluid py-5" id="projects">
         <div class="container">
             <div class="text-center mb-5">
                 <h1 class="display-4 text-uppercase text-primary">My Projects</h1>
